# ALBench

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: build-test-package.yml
Documentation/: ALBenchOverview.odp
al_bench/: __init__.py  benchmark.py  dataset.py  factory.py  model.py  strategy.py
example/: BayesianExample.ipynb  SimpleExample.ipynb
scripts/: FeatureExtraction.py  FeatureExtraction.xml  H5DataSet.py  Predict.py  SuperpixelSegmentation.py  SuperpixelSegmentation.xml  networks.py
test/: check.py  create.py  data_0050_factory.py  exercise.py  test_0000_imports.py  test_0010_dataset_handler_interface.py  test_0020_model_handler_interface.py  test_0030_strategy_handler_interface.py  test_0040_factory.py  test_0050_factory.py  test_0100_handler_combinations.py  test_0120_bayesian_model.py  test_high_level.py
