[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "al_bench"
readme = "README.md"
requires-python = ">=3.6"
authors = [{name = "Lee A. Newberg", email = "lee.newberg@kitware.com"}]
maintainers = [{name = "Lee A. Newberg", email = "lee.newberg@kitware.com"}]
keywords = ["active learning", "benchmark"]
classifiers = ["License :: OSI Approved :: Apache Software License"]
dependencies = [
    "h5py",
    "numpy",
]
dynamic = ["version", "description"]

[project.optional.dependencies]
torch = ["torch >= 1.11"]
tensorflow = ["tensorflow >= 2.6"]

[project.urls]
Source = "https://github.com/DigitalSlideArchive/ALBench"

[project.scripts]
flit = "flit:main"
